Landing page navbar with correct alignment, font, and colors.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,7 +27,7 @@
   --spacing-20: 5rem;
   --spacing-24: 6rem;
   --spacing-32: 8rem;
-  --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
+  --fontFamily-sans: Poppins, Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
@@ -56,7 +56,7 @@
   --fontSize-7: 2.986rem;
   --color-landing: #D9E5E4;
   --color-primary: #005b99;
-  --color-text: #2e353f;
+  --color-text: #1A2E35;
   --color-text-light: #4f5969;
   --color-heading: #1a202c;
   --color-heading-black: black;
@@ -246,7 +246,6 @@ a:focus {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-full);
   height: 100vh;
-  padding: var(--spacing-10) var(--spacing-5);
   background-size: cover;
   background-color: var(--color-landing);
   background-position: center;
